[package]
name = "mpecdsa"
version = "0.1.0"
authors = ["abhi <abhi@neu.edu>", "Jack Doerner <j@ckdoerner.net>"]
edition = "2021"

[dependencies]
getopts = "0.2.21"
rand = "0.8.5"
byteorder = "1.1.0"
bit_reverse = "0.1.7"
rayon = "1.1"
hex = "*"
openmp-sys = { version = "0.1.3", optional = true }
openssl = "0.10.42"
sha2 = "0.10.6"
rand_chacha = "0.3.1"
lazy_static = "1.4.0"
p384 = "0.11.2"
k256 = "0.11.6"

[profile.bench]
debug = true